# arho-qgis-plugin

./: .gitmodules  .pre-commit-config.yaml  README.md  arho-feature-template.code-workspace  pyproject.toml  qgisprojekti.qgz  requirements-dev.txt  ruff_defaults.toml
.github/workflows/: enforce-labels.yml
arho_feature_template/: __init__.py  exceptions.py  metadata.txt  plugin.py  utils.py
arho_feature_template/core/: event_bus.py  feature_editing.py  feature_template.py  feature_template_library.py  geotiff_creator.py  json_config.py  lambda_service.py  libraries.py  models.py  new_plan.py  plan_manager.py  plan_object_icons.py  plan_regulation_config.py  plan_regulation_group_config.py  settings_manager.py  template_library_config.py  template_manager.py  update_plan.py  utils.py
arho_feature_template/gui/: code_combobox.py  create_plan_regulation_group_form.ui  load_plan_dialog.py  new_plan_regulation_group_form.py  new_plan_regulation_group_form.ui  new_plan_regulation_widget.py  new_plan_regulation_widget.ui  plan_attribure_form.py  plan_attribute_form.ui  plan_feature_form.py  plan_regulation_group_form.py  plan_regulation_group_widget.py  plan_regulation_group_widget.ui  plan_regulation_input_widgets.py  plan_regulation_widget.py  plan_regulation_widget.ui  plugin_settings.py  plugin_settings.ui  post_plan.py  post_plan.ui  serialize_plan.py  template_attribute_form.py  template_attribute_form.ui  template_dock.py  template_dock.ui  validation_dock.py  validation_dock.ui  validation_tree_view.py
tests/: test_plugin.py
(+192 files in other folders)
