[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arho-feature-template"
version = "0.1.0"
requires-python = ">= 3.9"

[tool.setuptools]
packages = ["arho_feature_template"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = "tests"

[tool.coverage.report]
omit = ["arho_feature_template/qgis_plugin_tools/*"]

[tool.ruff]
target-version = "py39"
extend = "ruff_defaults.toml"
exclude = ["arho_feature_template/qgis_plugin_tools", "create_qgis_venv.py"]

[tool.ruff.lint]
unfixable = [
    "F401", # unused imports
    "F841", # unused variables
]


[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "arho_feature_template.qgis_plugin_tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "create_qgis_venv"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["qgis.*", "osgeo.*"]
ignore_missing_imports = true

[tool.qgis-plugin-ci]
plugin_path = "arho_feature_template"
github_organization_slug= "GispoCoding"
project_slug = "arho-feature-template"
